Add tasks array

--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,10 @@
     <title>Getting Started</title>
   </head>
   <body>
-    <h1>To-do list</h1>
+    <h1>To-do list!!!!!!!!!</h1>
+
+    <ul>
+      
+    </ul>
   </body>
 </html>
