Create loadHTML function

--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,9 @@
   <body>
     <h1>To-do list!!!!!!!!!</h1>
 
-    <ul>
-      
-    </ul>
+    <section class="todoList">
+    </section>
+
+    <script src="index.js"></script>
   </body>
 </html>
