--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,9 @@
     <title>Getting Started</title>
   </head>
   <body>
-    <h1>To-do list!!!!!!!!!</h1>
+    <section id="theTop" class="topPart">
+      <h1>Today's To Do</h1>
+    </section>
 
     <section class="todoList">
     </section>
