--- a/src/index.html
+++ b/src/index.html
@@ -5,13 +5,14 @@
     <title>Getting Started</title>
   </head>
   <body>
-    <section id="theTop" class="topPart">
-      <h1>Today's To Do</h1>
-    </section>
-
-    <section class="todoList">
-    </section>
-
-    <script src="index.js"></script>
+    <main class="mainCard">
+      <section id="theTop" class="topPart">
+        <h1>Today's To Do</h1>
+      </section>
+  
+      <section class="todoList">
+      </section>
+    </main>
+      <script src="index.js"></script>
   </body>
 </html>
