Add new image to project

--- a/src/index.html
+++ b/src/index.html
@@ -1,18 +1,27 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <title>Getting Started</title>
-  </head>
-  <body>
-    <main class="mainCard">
-      <section id="theTop" class="topPart">
-        <h1>Today's To Do</h1>
-      </section>
-  
-      <section class="todoList">
-      </section>
-    </main>
-      <script src="index.js"></script>
-  </body>
+
+<head>
+  <meta charset="utf-8" />
+  <title>Getting Started</title>
+</head>
+
+<body>
+  <main class="mainCard">
+    <section id="theTop" class="topPart bottomBorder">
+      <h1>Today's To Do</h1>
+    </section>
+
+    <section id="experiment1" class="bottomBorder">
+      <input class="mainInput" placeholder="Add to your list...">
+    </section>
+
+    <section class="todoList">
+    </section>
+
+    <p class="bottomPart">Clear all completed</p>
+  </main>
+  <script src="index.js"></script>
+</body>
+
 </html>
