--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <title>Getting Started</title>
+  <script src="https://kit.fontawesome.com/7622500898.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -12,17 +13,19 @@
       <h1>Today's To Do</h1>
     </section>
 
-    <section id="experiment1" class="bottomBorder">
+    <section class="bottomBorder experiment1">
       <input class="mainInput" placeholder="Add to your list...">
     </section>
 
-    <section class="todoList">
+    <section id="experiment1" class="todoList">
     </section>
 
     <section class="bottomPart">
-      <p>Clear all completed</p>
+      <p class="clearp">Clear all completed</p>
     </section>
   </main>
+  <i class="fa-solid fa-arrow-turn-down-left" style="color: #c0bfbc;"></i>
+  <i class="fa-solid fa-music"></i>
   <script src="index.js"></script>
 </body>
 
